--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -7,6 +7,7 @@ body {
 }
 
 .App-container {
+  position: relative;
   width: 100%;
   height: 100vh;
   display: grid;
@@ -18,12 +19,12 @@ body {
   width: $boardLength;
   height: $boardLength;
   display: grid;
-  gap: 15px;
+  gap: 12px;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   border-radius: 50%;
   overflow: hidden;
-  // border: 3px solid rgb(88, 88, 88);
+  box-shadow: 0px 0px 20px 4px $white;
 }
 
 * {
@@ -37,5 +38,6 @@ body {
   .App__gameboard {
     width: 360px;
     height: 360px;
+    gap: 8px;
   }
 }
