--- a/src/styles/FinalScoreModal.scss
+++ b/src/styles/FinalScoreModal.scss
@@ -14,19 +14,19 @@
 .FinalScoreModal__container {
   width: 400px;
   height: 200px;
-  background-image: linear-gradient(to right top, #00f4ff, #00fbe7, #00ffbb, #00ff7c, #4efd00);
+  background-image: linear-gradient(to right top, #00fbe7 20%, #00ffbb, #00ff7c 80%);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   border-radius: 20px;
   padding: 35px;
+  box-shadow: inset 0px 0px 15px $white, 0px 0px 10px $white;
 }
 
 .FinalScoreModal h2 {
   color: $bg;
   font-weight: 700;
-  text-shadow: 1px 1px 6px $white;
 }
 
 .FinalScoreModal button {
@@ -39,5 +39,21 @@
   font-size: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   cursor: pointer;
-  box-shadow: 1px 1px 40px $white;;
+  box-shadow: 0px 0px 10px $white;
+}
+
+@media screen and (max-width: 560px) {
+  .FinalScoreModal__container {
+    width: 300px;
+    height: 120px;
+    padding: 10px;
+  }
+  .FinalScoreModal h2 {
+    font-size: 20px;
+  }
+  .FinalScoreModal button {
+    width: 60px;
+    height: 30px;
+    font-size: 16px;
+  }
 }
