--- a/src/styles/MaxScore.scss
+++ b/src/styles/MaxScore.scss
@@ -2,11 +2,22 @@
 
 .MaxScore {
   position: absolute;
-  width: 300px;
-  height: 200px;
+  top: 10px;
+  left: 10px;
+  width: 200px;
+  height: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   color: $white;
+  border: 1px solid $white;
+  border-radius: 20px;
+  box-shadow: 0px 0px 4px $white;
+}
+
+@media screen and (min-width: 560px) {
+  .MaxScore {
+    left: calc(50% - 300px);
+  }
 }
